# ehsh

./: .gitattributes  .gitignore  .readthedocs.yaml  CMakeLists.txt  CMakePresets.json  Makefile  README.md  conanfile.py  devbox.json  library.json  main.c  metadata.json  notes  notesorig  portfile.cmake  usage  vcpkg.json
docs/: coverage.md
example/: main.c
src/: ehsh.c
src/ehsh/: ehcmd.h  ehsh.cfg.h  ehsh.h
src/ehsh/extra/: ehcmd.h
src/ehsh/platform/: eh.fptr.h  eh.linux.h  eh.platform.h  eh.stdc.h  eh.win32.h
test/: unit.c  unit.cpp
test/package/: CMakeLists.txt  test_vcpkg.py  vcpkg-configuration.json  vcpkg.json
test/package/src/: main.c
tools/: CMakeLists.txt  conanfile.py.in  conf.py  ehsh-config.cmake.in  ehsh.ipcf.in  ehsh.pc.in  library.json.in  library.properties.in  requirements.txt  vscode.css
